RSMS-763: Allow word breaks in inspectionReportTable elements to prevent overflow

--- a/rsms/src/stylesheets/style.css
+++ b/rsms/src/stylesheets/style.css
@@ -1680,6 +1680,7 @@ td.corrective-action.corrected-during-inspection{
 .inspectionReportTable td{
   padding-top: 0px !important;
   padding-top: 10px !important;
+  word-break: break-word;
 }
 .inspectionReportTable td:first-child span:first-child{
   padding: 10px 0 0;
